<resources>
    <string name="app_name">TutorMe</string>
    <string name="done">done</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profil</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_search_fragment">Hello Search</string>
    <string name="hello_user_fragment" />
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="registracija">Registracija</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="postojeci_racun">Već imate korisnički racun?</string>
    <string name="registruj_se">Registruj se</string>
    <string name="log_in">Log in</string>
    <string name="student">Student</string>
    <string name="instruktor">Instruktor</string>
    <string name="action_favorite">action_fav</string>
    <string name="action_settings">settings</string>
    <string name="log_out">Log out</string>
    <string name="textview">TextView</string>
    <string name="unesite_poruku">Unesite poruku</string>
    <string name="pretraga_po_imenu_ili_predmetu">Tražite po imenu ili predmetu</string>
    <string name="uputstvo">Izaberite predmete iz kojih držite časove</string>
    <string name="uputstvo2">Ocijenite vašeg instruktora :)</string>
    <string name="unesite_va_e_mi_ljenje">Unesite vaše mišljenje</string>
    <string name="po_alji">Pošalji</string>
    <string name="ocjena">Ocjena:</string>
    <string name="search">Pretraga</string>
    <string name="promijeni_lozinku">Promijeni lozinku</string>
    <string name="spasi_promjene">Spasi promjene</string>
</resources>